--- a/public/backend/assets/css/custom/custom.css
+++ b/public/backend/assets/css/custom/custom.css
@@ -422,3 +422,20 @@ input[type=range]::-ms-thumb
 {
     max-height: 85%;
 }
+.light-small-ico-bg
+{
+    padding: 6px;
+
+    border-radius: 50%;
+/*    background-color: #f3f1f1;*/
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+.dark-small-ico-bg
+{
+    padding: 6px;
+
+    border-radius: 50%;
+/*    background-color: #f3f1f1;*/
+    background-color: rgba(0, 0, 0, 0.1);
+}
