--- a/public/backend/assets/css/custom/custom.css
+++ b/public/backend/assets/css/custom/custom.css
@@ -463,3 +463,28 @@ input[type=range]::-ms-thumb
     width: 10rem;
     font-size: 3em;
 }
+
+.tabs-vertical .tabs .tab a
+{
+    -webkit-transition: none !important;
+            transition: none !important;
+
+    color: #6b6f82;
+}
+
+.tabs-vertical .tabs .tab a:hover
+{
+    color: #6b6f82 !important;
+}
+
+.tabs-vertical .tabs .tab a.active
+{
+    color: grey !important;
+    border-radius: 4px;
+    background-color: #f5f5f5 !important;
+}
+
+.tabs-vertical .tabs .tab a.active:hover
+{
+    color: #ff4081 !important;
+}
